[gd_scene load_steps=5 format=3 uid="uid://calltc1gumdi2"]

[ext_resource type="Script" uid="uid://b4kodgy0qo0cl" path="res://scripts/UIBattle.gd" id="1_a268n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a268n"]
bg_color = Color(0, 0.365644, 0.306951, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jaicp"]
bg_color = Color(0, 0.559558, 0.459418, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bujy"]
bg_color = Color(0, 0.508119, 0.47713, 1)

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a268n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 24.0
offset_right = 193.0
offset_bottom = 195.0

[node name="AttackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxFlat_a268n")
action_mode = 0
text = "Attack"

[node name="DefendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_jaicp")
text = "Defend"

[node name="SkillButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Skill"

[node name="ItemButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_3bujy")
text = "Item"

[node name="FleeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Flee"

[node name="Skill" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.262
anchor_top = 0.354
anchor_right = 0.362
anchor_bottom = 0.577
offset_left = 8.63995
offset_top = 0.127991
offset_right = 0.639984
offset_bottom = -0.136017

[node name="ScrollContainer" type="ScrollContainer" parent="Skill"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.2
anchor_top = -0.327
anchor_bottom = 1.357
offset_left = -7.0
offset_top = -36.083
offset_right = -7.0
offset_bottom = -36.047
horizontal_scroll_mode = 0

[node name="SkillListContainer" type="VBoxContainer" parent="Skill/ScrollContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SkillInfoPanel" type="VBoxContainer" parent="Skill"]
visible = false
layout_mode = 2
anchor_left = -1.2
anchor_top = -2.48
anchor_right = 1.067
anchor_bottom = -1.45
offset_left = -8.0
offset_top = -135.92
offset_right = -8.04001
offset_bottom = -132.05
grow_horizontal = 2
grow_vertical = 2

[node name="SkillName" type="Label" parent="Skill/SkillInfoPanel"]
layout_mode = 2
mouse_filter = 0

[node name="SkillCost" type="Label" parent="Skill/SkillInfoPanel"]
layout_mode = 2

[node name="SkillDescription" type="Label" parent="Skill/SkillInfoPanel"]
layout_mode = 2

[node name="Item" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.231
anchor_top = 0.406
anchor_right = 0.325
anchor_bottom = 0.625
offset_left = 0.320007
offset_top = 0.191986
offset_right = -3.05176e-05
offset_bottom = 3.0

[node name="ScrollContainer" type="ScrollContainer" parent="Item"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.858
anchor_top = -0.608
anchor_right = 0.333
anchor_bottom = 1.17
offset_left = -0.0399933
offset_top = -13.032
offset_right = 1.04
offset_bottom = -8.07001
horizontal_scroll_mode = 0

[node name="ItemListContainer" type="VBoxContainer" parent="Item/ScrollContainer"]
layout_mode = 2

[node name="ItemInfoPanel" type="VBoxContainer" parent="Item"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -1.2
anchor_top = -2.48
anchor_right = 1.067
anchor_bottom = -1.45
offset_left = 32.0
offset_top = -143.92
offset_right = 31.96
offset_bottom = -140.05
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="Item/ItemInfoPanel"]
layout_mode = 2
mouse_filter = 0

[node name="ItemDescription" type="Label" parent="Item/ItemInfoPanel"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="toggled" from="VBoxContainer/AttackButton" to="." method="_on_attack_button_toggled"]
[connection signal="pressed" from="VBoxContainer/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SkillButton" to="." method="_on_skill_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FleeButton" to="." method="_on_flee_button_pressed"]
